feat: add time and date travel
